.ibm/pipelines/resources/topology_test/topology-test-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: topology-test-ingress
  labels:
    app: topology-test
    backstage.io/kubernetes-id: developer-hub
spec:
  rules:
    - host: apps-crc.testing
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: topology-test-service
                port:
                  number: 8080
