.ibm/pipelines/resources/topology_test/topology-test.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: topology-test
  labels:
    app.kubernetes.io/instance: topology-test
    app.kubernetes.io/name: topology-test
    backstage.io/kubernetes-id: developer-hub
  annotations: 
    app.openshift.io/vcs-uri: "https://github.com/janus-idp/backstage-showcase"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: topology-test
  template:
    metadata:
      labels:
        app: topology-test
        backstage.io/kubernetes-id: developer-hub
    spec:
      containers:
      - name: topology
        image: nginxinc/nginx-unprivileged:stable-alpine
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: topology-test-service
  labels:
    app: topology-test
    backstage.io/kubernetes-id: developer-hub
spec:
  selector:
    app: topology-test
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: topology-test-route
  labels:
    app: topology-test
    backstage.io/kubernetes-id: developer-hub
spec:
  to:
    kind: Service
    name: topology-test-service
  port:
    targetPort: 8080
  wildcardPolicy: None
